# mast3r

./: .gitignore  .gitmodules  preprocess_gsplat.py  pyproject.toml
mast3r/: model.py
mast3r/cloud_opt/: sparse_ga.py
